ADD movie review

--- a/main.ipynb
+++ b/main.ipynb
@@ -9,13 +9,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Supervised"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Error loading movie_reviews: <urlopen error [WinError\n",
+      "[nltk_data]     10065] Se ha intentado una operación de socket en un\n",
+      "[nltk_data]     host no accesible>\n"
+     ]
+    }
+   ],
+   "source": [
     "import nltk\n",
-    "nltk.download('wordnet')\n",
-    "from nltk.corpus import wordnet as wn"
+    "nltk.download('movie_reviews')\n",
+    "from nltk.corpus import movie_reviews as mr"
    ]
   },
   {
@@ -23,7 +42,30 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "llista = mr.fileids('pos')\n",
+    "print(list(mr.words(llista))[-10:-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nltk.FreqDist(movie_reviews.words())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.feature_extraction.text import CountVectorizer\n",
+    "vectorizer = CountVectorizer()\n",
+    "X = vectorizer.fit_transform(corpus)"
+   ]
   }
  ],
  "metadata": {
@@ -42,7 +84,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.8"
   },
   "orig_nbformat": 4
  },
