MOD main.ipynb splitted in 2 files

--- a/main.ipynb
+++ b/main.ipynb
@@ -359,9 +359,7 @@
     "from nltk.tokenize import word_tokenize\n",
     "from nltk.stem import WordNetLemmatizer\n",
     "from nltk.corpus import sentiwordnet as swn\n",
-    "from nltk.wsd import lesk\n",
-    "\n",
-    "import pickle"
+    "from nltk.wsd import lesk"
    ]
   },
   {
@@ -700,7 +698,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.2"
   },
   "orig_nbformat": 4
  },
