FIX load datasets

--- a/unsupervised.ipynb
+++ b/unsupervised.ipynb
@@ -45,10 +45,10 @@
    "outputs": [],
    "source": [
     "# Load datasets    \n",
-    "with open('X_test.json', 'r') as file:\n",
+    "with open('./data/X_test.json', 'r') as file:\n",
     "    X_test = json.load(file)\n",
     "    \n",
-    "with open('y_test.json', 'r') as file:\n",
+    "with open('./data/y_test.json', 'r') as file:\n",
     "    y_test = json.load(file)"
    ]
   },
