--- a/unsupervised.ipynb
+++ b/unsupervised.ipynb
@@ -34,8 +34,8 @@
    "outputs": [],
    "source": [
     "load_dotenv('login.env')\n",
-    "ts_password = os.getenv(\"PASSWORD_CAI\")\n",
-    "ts_user = os.getenv(\"USER_CAI\")"
+    "ts_password = os.getenv(\"PASSWORD_PAU\")\n",
+    "ts_user = os.getenv(\"USER_PAU\")"
    ]
   },
   {
@@ -124,6 +124,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "def get_sentences(text:str, remove_stopwords:bool = False) -> None:\n",
     "    sent_list = nltk.sent_tokenize(text)\n",
     "    if remove_stopwords:\n",
@@ -145,6 +154,8 @@
     "    r = []\n",
     "    for sent in sentences:\n",
     "        a = ts.senses(sent)\n",
+    "        print(a)\n",
+    "        time.sleep(0.3)\n",
     "        r.append(a)\n",
     "    return r\n",
     "\n",
@@ -178,9 +189,13 @@
     "    return all\n",
     "    \n",
     "def all_synsets():\n",
+    "    all_synsets = []\n",
     "    for opinion in X_test:\n",
     "        s = get_sentences(opinion)\n",
     "        syns = get_synsets(s)\n",
+    "        all_synsets.append(syns)\n",
+    "        with open('./data/ts_test_synsets.json', 'w') as file:\n",
+    "            json.dump(all_synsets, file)\n",
     "\n",
     "def get_sentiment(synset:'Synset'):\n",
     "    sentiment = swn.senti_synset(synset)\n",
@@ -190,6 +205,23 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "i didn ' t realize how apt the name of this movie was until i called the mpaa ( the motion picture association of america - the folks who decide what ' s g , nc 17 , pg , r or x ) to ask why the preview was rated r .\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(get_sentences(X_test[0])[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -207,7 +239,7 @@
        "True"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,26 +308,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./data/ukb1_test_synsets.json', 'r') as file:\n",
+    "with open('./data/ukb2_test_synsets.json', 'r') as file:\n",
     "    test_synsets = json.load(file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
-    "allowed = [ \"a\", \"r\", \"n\", \"v\", \"s\"]"
+    "allowed = [  \"v\", \"a\", \"s\", \"n\"]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,19 +361,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.668\n"
+      "0.67\n"
      ]
     }
    ],
    "source": [
-    "results = [0 if a < 0.35 else 1 for a in scores_res]\n",
+    "results = [0 if a < 0.1 else 1 for a in scores_res]\n",
     "print(accuracy_score(y_test, results))"
    ]
   },
@@ -370,7 +402,7 @@
     "ukb = UKB(ukb_graph)\n",
     "def get_ukb_synsets(text:str):\n",
     "    context_words = extract_context_words(text)\n",
-    "    disambiguated_senses = ukb.disambiguate_context(context_words, method=1)\n",
+    "    disambiguated_senses = ukb.disambiguate_context(context_words, method=2)\n",
     "    return list(disambiguated_senses.values())\n",
     "\n",
     "def get_ukb_all_synsets(sentences:list) -> list:\n",
@@ -383,6 +415,25 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'name.n.01', 'john': 'toilet.n.01', 'work': 'work.v.01', 'very': 'very.r.01', 'hard': 'hard.r.01', 'google': 'google.n.01'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "context_words = extract_context_words(\"my name is john and i work very hard at google\")\n",
+    "disambiguated_senses = ukb.disambiguate_context(context_words, method=2)\n",
+    "print(disambiguated_senses)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -405,11 +456,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "with open('./data/ukb1_test_synsets.json', 'w') as file:\n",
+    "with open('./data/ukb2_test_synsets.json', 'w') as file:\n",
     "    json.dump(test_synsets, file)"
    ]
   }
