--- a/supervised.ipynb
+++ b/supervised.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,23 +154,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.854"
+       "0.86"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "clf = RandomForestClassifier(n_estimators=5000, max_depth=12, random_state=0)\n",
+    "clf = RandomForestClassifier(n_estimators=3000, max_depth=13, random_state=0)\n",
     "clf.fit(X_train, y_train)\n",
     "\n",
     "accuracy_score(clf.predict(X_test), y_test)"
@@ -198,6 +198,36 @@
     "clf.fit(X_train, y_train)\n",
     "\n",
     "accuracy_score(clf.predict(X_test), y_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lam_max = np.abs(X_train.T * (y_train - y_train.mean())).max()\n",
+    "lam_val = lam_max * np.exp(np.linspace(np.log(1),\n",
+    "np.log(1e-4), 50))\n",
+    "\n",
+    "logit = LogisticRegression(penalty='l1',\n",
+    "    C=1/lam_max,\n",
+    "    solver='liblinear',\n",
+    "    warm_start=True,\n",
+    "    fit_intercept=True)\n",
+    "coefs = []\n",
+    "intercepts = []\n",
+    "for l in lam_val:\n",
+    "    logit.C = 1/l\n",
+    "    logit.fit(X_train, y_train)\n",
+    "    coefs.append(logit.coef_.copy())\n",
+    "    intercepts.append(logit.intercept_)\n",
+    "coefs = np.squeeze(coefs)\n",
+    "intercepts = np.squeeze(intercepts)\n",
+    "\n",
+    "linpred_ = X_test * coefs.T + intercepts[None,:]\n",
+    "label_ = np.array(linpred_ > 0)\n",
+    "accuracy_ = np.array([np.mean(y_test == l) for l in label_.T])"
    ]
   },
   {
@@ -267,7 +297,7 @@
    "source": [
     "from sklearn.neural_network import MLPClassifier\n",
     "\n",
-    "clf = MLPClassifier(solver='lbfgs', max_iter=10000, alpha=1e-3, hidden_layer_sizes=(64, 64), random_state=1)\n",
+    "clf = MLPClassifier(solver='adam', max_iter=10000, activation=\"tanh\", alpha=0.0001, hidden_layer_sizes=(64, 64), random_state=1)\n",
     "clf.fit(X_train, y_train)\n",
     "accuracy_score(clf.predict(X_test), y_test)"
    ]
@@ -335,7 +365,7 @@
     "    (GradientBoostingClassifier(), {'n_estimators': [100, 200], 'learning_rate': [0.1, 0.2, 0.5], 'max_depth': [3, 5, 7], 'random_state': [random_state]}),\n",
     "    (AdaBoostClassifier(), {'n_estimators': [50, 100, 200], 'algorithm': [\"SAMME\", \"SAMME.R\"], 'learning_rate': [0.5, 1], 'random_state': [random_state]}),\n",
     "    (GaussianNB(), {}),  # GaussianNB doesn't have any hyperparameters\n",
-    "    (RandomForestClassifier(), {'n_estimators': [100, 200], 'max_depth': [2, 5, 10, None], 'random_state': [random_state]}),\n",
+    "    (RandomForestClassifier(), {'n_estimators': [100, 200, 400, 800], 'max_depth': [2, 5, 10, 15, None], 'random_state': [random_state]}),\n",
     "    (LogisticRegression(), {'C': [0.5, 1, 5], 'max_iter': [1000] , 'random_state': [random_state]}),\n",
     "    (SVC(), {'C': [0.5, 1, 5], 'kernel': ['linear', 'rbf', 'poly'], 'degree': [1, 2, 3], 'random_state': [random_state]}),\n",
     "    (KNeighborsClassifier(), {'n_neighbors': [3, 5, 7]}),\n",
