--- a/unsupervised.ipynb
+++ b/unsupervised.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -463,6 +463,163 @@
     "with open('./data/ukb2_test_synsets.json', 'w') as file:\n",
     "    json.dump(test_synsets, file)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Using just the most freqüent synset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "frequencies = json.load(open(\"./data/word_sense_frequencies_semcor.json\"))\n",
+    "\n",
+    "def get_freq_synsets(text:str):\n",
+    "    tokens = word_tokenize(text)\n",
+    "    tagged_tokens = [(a.text, a.pos_) for a in nlp(text)]\n",
+    "    words = []\n",
+    "    for token, pos in tagged_tokens:\n",
+    "        if token not in frequencies.keys():\n",
+    "            syn = None\n",
+    "        else:\n",
+    "            if pos == \"NOUN\":\n",
+    "                syn = max(frequencies[token], key=lambda key: frequencies[token][key])\n",
+    "            elif pos == \"ADJ\":\n",
+    "                syn = max(frequencies[token], key=lambda key: frequencies[token][key])\n",
+    "            elif pos == \"ADV\":\n",
+    "                syn = max(frequencies[token], key=lambda key: frequencies[token][key])\n",
+    "            elif pos == \"VERB\":\n",
+    "                syn = max(frequencies[token], key=lambda key: frequencies[token][key])\n",
+    "            else:\n",
+    "                syn = None\n",
+    "        if syn is not None:\n",
+    "            words.append(syn.name() if syn.__class__.__name__ == \"Lemma\" else syn)\n",
+    "    return words\n",
+    "\n",
+    "def get_freq_all_synsets(sentences:list) -> list:\n",
+    "    all = []\n",
+    "    for sentence in sentences:\n",
+    "        all.append([a for a in get_freq_synsets(sentence) if a != None])\n",
+    "    return all\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "499\r"
+     ]
+    }
+   ],
+   "source": [
+    "test_synsets = []\n",
+    "for i, opinion in enumerate(X_test):\n",
+    "    s = get_sentences(opinion)\n",
+    "    #s = [fix_text(t) for t in s]\n",
+    "    syns = get_freq_all_synsets(s)\n",
+    "    test_synsets.append(syns)\n",
+    "    print(i, end=\"\\r\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('./data/freq_test_synsets.json', 'w') as file:\n",
+    "    json.dump(test_synsets, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "allowed = [  \"v\", \"a\", \"s\", \"n\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "results = []\n",
+    "scores_obj = []\n",
+    "scores_res = []\n",
+    "for opinion in test_synsets:\n",
+    "    total_pos = 0\n",
+    "    total_neg = 0\n",
+    "    total_obj = 0\n",
+    "    for sentence in opinion:\n",
+    "        filter_sentence = [name for name in sentence if name != \"NE\" and name.split('.')[1] in allowed]\n",
+    "        new_filter_sentence = []\n",
+    "        for a in filter_sentence:\n",
+    "            if \"Lemma('\" in a :\n",
+    "                n = a.replace(\"Lemma('\", \"\").replace(\"')\", \"\")\n",
+    "                n = n.split(\".\")\n",
+    "                n.pop(-1)\n",
+    "                n = \".\".join(n)\n",
+    "                new_filter_sentence.append(n)\n",
+    "            else:\n",
+    "                new_filter_sentence.append(a)\n",
+    "            \n",
+    "        filter_sentence = new_filter_sentence\n",
+    "        scores = []\n",
+    "        for syn in filter_sentence:\n",
+    "            try:\n",
+    "                if get_sentiment(syn) != None:\n",
+    "                    scores.append(get_sentiment(syn))\n",
+    "            except:\n",
+    "                scores = scores\n",
+    "        if len(scores) > 0:\n",
+    "            total_pos += sum(s[0] for s in scores)/len(scores)\n",
+    "            total_neg += sum(s[1] for s in scores)/len(scores)\n",
+    "            total_obj += sum(s[2] for s in scores) /len(scores)\n",
+    "    score = total_obj\n",
+    "    scores_obj.append(total_obj)\n",
+    "    scores_res.append(total_pos - total_neg)\n",
+    "    if score > 0:\n",
+    "        # print(\"Positive\")\n",
+    "        results.append(1)\n",
+    "    elif score < 0:\n",
+    "        # print(\"Negative\")\n",
+    "        results.append(0)\n",
+    "    else:\n",
+    "        # print(\"Neutral\")\n",
+    "        results.append(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 107,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.608\n"
+     ]
+    }
+   ],
+   "source": [
+    "results = [0 if a < 0 else 1 for a in scores_res]\n",
+    "print(accuracy_score(y_test, results))"
+   ]
   }
  ],
  "metadata": {
@@ -481,7 +638,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.8"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4
  },
