MOD unuspervised structure

--- a/unsupervised.ipynb
+++ b/unsupervised.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# LESK"
+    "# Initialization"
    ]
   },
   {
@@ -141,35 +141,6 @@
     "        return no_stopwords_sentences\n",
     "    else:\n",
     "        return sent_list\n",
-    "\n",
-    "def get_lesk_synsets(text:str, lemmatize:bool = True, remove_stopwords:bool = False):\n",
-    "    tokens = word_tokenize(text)\n",
-    "    if lemmatize:\n",
-    "        tokens = [lemmatizer.lemmatize(token) for token in tokens]\n",
-    "    if remove_stopwords:\n",
-    "        tokens = [w for w in tokens if not w.lower() in stop_words]\n",
-    "    tagged_tokens = [(a.text, a.pos_) for a in nlp(text)]\n",
-    "    words = []\n",
-    "    for token, pos in tagged_tokens:\n",
-    "        if pos == \"NOUN\":\n",
-    "            syn = lesk(tokens, token, pos=\"n\")\n",
-    "        elif pos == \"ADJ\":\n",
-    "            syn = lesk(tokens, token, pos=\"a\")\n",
-    "        elif pos == \"ADV\":\n",
-    "            syn = lesk(tokens, token, pos=\"r\")\n",
-    "        elif pos == \"VERB\":\n",
-    "            syn = lesk(tokens, token, pos=\"v\")\n",
-    "        else:\n",
-    "            syn = None\n",
-    "        if syn is not None:\n",
-    "            words.append(syn)\n",
-    "    return words\n",
-    "\n",
-    "def get_lesk_all_synsets(sentences:list, lemmatizer:bool = True) -> list:\n",
-    "    all = []\n",
-    "    for sentence in sentences:\n",
-    "        all.append(get_lesk_synsets(sentence, lemmatizer))\n",
-    "    return all\n",
     "    \n",
     "\n",
     "def get_sentiment(synset:'Synset'):\n",
@@ -245,6 +216,49 @@
     "        negative_value: Value to assign to negative scores.\n",
     "    \"\"\"\n",
     "    return list(map(lambda x: positive_value if x >= threshold else negative_value, scores))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# LESK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_lesk_synsets(text:str, lemmatize:bool = True, remove_stopwords:bool = False):\n",
+    "    tokens = word_tokenize(text)\n",
+    "    if lemmatize:\n",
+    "        tokens = [lemmatizer.lemmatize(token) for token in tokens]\n",
+    "    if remove_stopwords:\n",
+    "        tokens = [w for w in tokens if not w.lower() in stop_words]\n",
+    "    tagged_tokens = [(a.text, a.pos_) for a in nlp(text)]\n",
+    "    words = []\n",
+    "    for token, pos in tagged_tokens:\n",
+    "        if pos == \"NOUN\":\n",
+    "            syn = lesk(tokens, token, pos=\"n\")\n",
+    "        elif pos == \"ADJ\":\n",
+    "            syn = lesk(tokens, token, pos=\"a\")\n",
+    "        elif pos == \"ADV\":\n",
+    "            syn = lesk(tokens, token, pos=\"r\")\n",
+    "        elif pos == \"VERB\":\n",
+    "            syn = lesk(tokens, token, pos=\"v\")\n",
+    "        else:\n",
+    "            syn = None\n",
+    "        if syn is not None:\n",
+    "            words.append(syn)\n",
+    "    return words\n",
+    "\n",
+    "def get_lesk_all_synsets(sentences:list, lemmatizer:bool = True) -> list:\n",
+    "    all = []\n",
+    "    for sentence in sentences:\n",
+    "        all.append(get_lesk_synsets(sentence, lemmatizer))\n",
+    "    return all"
    ]
   },
   {
@@ -408,7 +422,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# FREQUENCIES"
+    "# Frequencies"
    ]
   },
   {
