FIX (not finished) ukb

--- a/unsupervised.ipynb
+++ b/unsupervised.ipynb
@@ -73,13 +73,7 @@
      "text": [
       "[nltk_data] Downloading package stopwords to\n",
       "[nltk_data]     C:\\Users\\Usuario\\AppData\\Roaming\\nltk_data...\n",
-      "[nltk_data]   Package stopwords is already up-to-date!\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
+      "[nltk_data]   Package stopwords is already up-to-date!\n",
       "[nltk_data] Downloading package universal_tagset to\n",
       "[nltk_data]     C:\\Users\\Usuario\\AppData\\Roaming\\nltk_data...\n",
       "[nltk_data]   Package universal_tagset is already up-to-date!\n"
@@ -336,7 +330,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +346,7 @@
     "ukb = UKB(ukb_graph)\n",
     "def get_ukb_synsets(text:str):\n",
     "    context_words = extract_context_words(text)\n",
-    "    disambiguated_senses = ukb.disambiguate_context(context_words, method=2)\n",
+    "    disambiguated_senses = ukb.disambiguate_context(context_words, method=3)\n",
     "    return list(disambiguated_senses.values())\n",
     "\n",
     "def get_ukb_all_synsets(sentences:list) -> list:\n",
@@ -364,24 +358,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'extract_context_words' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m context_words \u001b[38;5;241m=\u001b[39m \u001b[43mextract_context_words\u001b[49m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mmy name is john and i work very hard at google\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[0;32m      2\u001b[0m disambiguated_senses \u001b[38;5;241m=\u001b[39m ukb\u001b[38;5;241m.\u001b[39mdisambiguate_context(context_words, method\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)\n\u001b[0;32m      3\u001b[0m \u001b[38;5;28mprint\u001b[39m(disambiguated_senses)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'extract_context_words' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'name.n.01', 'john': 'john.n.02', 'work': 'shape.v.02', 'very': 'very.r.01', 'hard': 'hard.r.01', 'google': 'google.n.01'}\n"
      ]
     }
    ],
    "source": [
-    "context_words = extract_context_words(\"my name is john and i work very hard at google\")\n",
-    "disambiguated_senses = ukb.disambiguate_context(context_words, method=1)\n",
+    "context_words = extract_context_words(\"find the solution to this problem\")\n",
+    "disambiguated_senses = ukb.disambiguate_context(context_words, method=3)\n",
     "print(disambiguated_senses)"
    ]
   },
@@ -1088,7 +1078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1098,7 +1088,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1107,7 +1097,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -1116,7 +1106,7 @@
        "0.61"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1174,6 +1164,87 @@
     "print(accuracy_score(y_test, results))\n",
     "\"\"\"\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Alternatives"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "There are other approaches that can be also useful."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package vader_lexicon to\n",
+      "[nltk_data]     C:\\Users\\Usuario\\AppData\\Roaming\\nltk_data...\n",
+      "[nltk_data]   Package vader_lexicon is already up-to-date!\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0.64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "from nltk.tokenize import sent_tokenize\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
+    "nltk.download('vader_lexicon')\n",
+    "analyzer = SentimentIntensityAnalyzer()\n",
+    "\n",
+    "scores_opinions = []\n",
+    "for opinion in X_test:\n",
+    "    scores_sentences = []\n",
+    "    for sentence in sent_tokenize(opinion):\n",
+    "        scores = analyzer.polarity_scores(sentence)\n",
+    "        resta = scores[\"pos\"] - scores[\"neg\"]\n",
+    "        scores_sentences.append(resta)\n",
+    "    scores_opinions.append(np.mean(scores_sentences))\n",
+    "\n",
+    "results_opinions = discretize_scores(scores=scores_opinions, threshold=0.06)\n",
+    "\n",
+    "accuracy_score(y_test, results_opinions)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.668"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_opinions = discretize_scores(scores=scores_opinions, threshold=0.015)\n",
+    "accuracy_score(y_test, results_opinions)"
+   ]
   }
  ],
  "metadata": {
@@ -1192,7 +1263,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.2"
+   "version": "3.11.9"
   },
   "orig_nbformat": 4
  },
