FIX text in confussion matrix plots

--- a/unsupervised.ipynb
+++ b/unsupervised.ipynb
@@ -981,7 +981,7 @@
     "\tsns.heatmap(cm, annot=True, fmt='d', cmap='Blues', cbar=True, ax=ax)\n",
     "\tax.set_xlabel('Predicted')\n",
     "\tax.set_ylabel('True')\n",
-    "\tplt.title('Confusion matrix on the test set')\n",
+    "\tplt.title('Confusion matrix')\n",
     "\tplt.show()"
    ]
   },
